vpc.tf
provider "aws" {
    region = "eu-west-2"
}

resource "aws_vpc" "vpc" {
    cidr_block = "192.168.0.0/16"
    enable_dns_support = true
    enable_dns_hostnames = true
    tags = {
        Name = "Terraform VPC"
    }
}
